# EjerciciosP09

./: LICENSE  README.md  functions.md  functions.md~  main1
Ejercicios/Ejercicio1/: .main.cc.swp  CMakeLists.txt  Doxyfile.in  main1.cc  operation.cc
Ejercicios/Ejercicio2/: Makefile  main2.cc  operation1.h
Ejercicios/Ejercicio3/: Ejercicio3.cc
Ejercicios/Ejercicio4/: .operation.h.swp  main4.cc  operation.h
Ejercicios/Ejercicio5/: main5.cc  operation5.h
Ejercicios/PA/: main.cc  main2.cc
